gitops/apps/open-date/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: open-date
  namespace: open-date
  labels:
    app: open-date
spec:
  revisionHistoryLimit: 2
  progressDeadlineSeconds: 120
  selector:
    matchLabels:
      app: open-date
  template:
    metadata:
      labels:
        app: open-date
    spec:
      containers:
        - name: open-date
          image: ghcr.io/ismola/open-date:main
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
