gitops/apps/open-date/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: open-date
  namespace: open-date
spec:
  type: ClusterIP
  selector:
    app: open-date
  ports:
    - name: http
      port: 80
      targetPort: 3000
