gitops/apps/open-date/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: open-date
  namespace: open-date
spec:
  ingressClassName: traefik
  rules:
    - host: open-date.ismola.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: open-date
                port:
                  number: 80
